--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ db/*.sqlite3
 /public/assets/*
 /public/stylesheets/compiled
 /public/system/*
+/public/resource/*
 /spec/tmp/*
 /cache
 /capybara*
